--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "@mui/material": "^5.11.16",
     "formik": "^2.2.9",
     "react": "^18.2.0",
+    "react-country-region-selector": "^3.6.1",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.10.0",
     "yup": "^1.0.2"
